# fourier-grx-client

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  Tutorial.ipynb  mkdocs.yml  pdm.toml  pyproject.toml  tutorial.ipynb  versions.json
.github/workflows/: release.yml
0.1.0/: 404.html  index.html
0.1.0/search/: search_index.json
0.1.2/: index.html  objects.inv
0.1.2/search/: search_index.json
0.1.3/: index.html  objects.inv
0.1.3/search/: search_index.json
0.1.4/: index.html  objects.inv
0.1.4/search/: search_index.json
0.1.5/: 404.html  index.html
0.1.5/search/: search_index.json
0.2.0/: 404.html  index.html  objects.inv
0.2.0/Installation/: index.html
0.2.0/permissions/: index.html
0.2.0/search/: search_index.json
0.2.0a8/: index.html  objects.inv
0.2.0a8/Installation/: index.html
0.2.0a8/permissions/: index.html
0.2.0a8/search/: search_index.json
config/: config_GR1_T1.yaml  config_GR1_T2.yaml
demo/: demo_robot_client.py
demo/config/: demo_gains.py
demo/kinematics/: demo_get_transform.py  demo_inverse_kinematics.py
demo/move/: demo_move_joints.py
docker/: base.Dockerfile  build.Dockerfile  build.sh
docs/: Installation.md  index.md  permissions.md
docs/dev/: changelog.md
docs/reference/: api.md  cli.md
docs/tutorials/: calibration.md  impedance_readme.md
example/kinematics/: forward_kinematics.py
example/states/: get_base_states.py  get_imu_states.py  get_joint_states.py
examples/: joystick_read.py  move_hand.py  move_joints_gravity.py  nohla_rl_walk.py  nohla_stand.py  print_joints.py  robot_client.py
examples/RL_move/: nohla_rl_walk.py  nohla_stand.py
examples/config/: gains.py
examples/kinematics/: forward_kinematics.py  get_transform.py  inverse_kinematics.py
examples/move/: move_joints.py  movej.py  movel.py
examples/states/: get_base_states.py  get_imu_states.py  get_joint_states.py
src/fourier_grx_client/: __init__.py  client.py  constants.py  exceptions.py  utils.py  zenoh.py  (+1 more)
(+26 files in other folders)
