[project]
name = "fourier-grx-client"
version = "0.2.0-alpha.8"
description = "Client library for Fourier GRx series robots"
authors = [{ name = "Yuxiang Gao", email = "yuxiang.gao@fftai.com" }]
dependencies = [
    "numpy>=1.24.4",
    "msgpack>=1.0.8",
    "msgpack-numpy>=0.4.8",
    "eclipse-zenoh==0.11.0",
    "loguru>=0.7.2",
    "rich>=13.8.0",
    "omegaconf>=2.3.0",
    "ipywidgets>=8.1.5",
]
requires-python = ">=3.8"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
doc = { cmd = "mkdocs serve", help = "Start the dev server for docs preview" }
lint = "pre-commit run --all-files"
publish = "pdm publish -v -u __token__"
publish_doc = "mike deploy --push --update-aliases"

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
name = "tuna"

[tool.pdm.dev-dependencies]
dev = [
    "mkdocs>=1.6.0",
    "ruff>=0.6.3",
    "pyright>=1.1.378",
    "mkdocs-material>=9.5.33",
    "mkdocstrings[python]>=0.25.2",
    "mkdocs-version-annotations>=1.0.0",
    "mike>=2.1.3",
    "markdown-exec>=1.9.3",
    "pre-commit>=3.5.0",
]

[tool.ruff]
include = ["**/*.py", "**/*.pyi", "**/pyproject.toml"]
exclude = [".venv", "build", "dist"]
line-length = 120

[tool.ruff.lint]
select = [
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "E",   # pycodestyle - Error
    "W",   # pycodestyle - Warning
    "F",   # Pyflakes
    'PLC',
    'PLE',
    'PLW', # Pylint
    "I",   # isort
    "UP",  # pyupgrade
    "NPY", # numpy
]
ignore = [
    "E501", # line-too-long
    # "F401", # unused import
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]


[tool.pyright]
include = ["src/**/*.py"]
pythonVersion = "3.11"
pythonPlatform = "Linux"

[tool.ruff.lint.pydocstyle]
convention = "google"
